[gd_scene load_steps=2 format=3 uid="uid://d08ymwie64x78"]

[ext_resource type="Script" path="res://gui.gd" id="1_isxt5"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_isxt5")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="values" type="TextEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "List your values by seperating them with commas"
wrap_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="class" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Your class' name here"

[node name="def_var" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Your default variable type here"

[node name="generate" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Generate!"

[node name="output" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Open output folder"

[connection signal="text_changed" from="HBoxContainer/VBoxContainer/class" to="." method="_on_class_text_changed"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/def_var" to="." method="_on_def_var_text_changed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/generate" to="." method="_on_generate_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/output" to="." method="_on_output_pressed"]
